final version need more comments + error log til file

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -85,6 +85,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="error.txt" />
     <Content Include="Properties\background.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
